# cuda-examples

./: CMakeLists.txt  README.md
include/: image.h  matrix.h
src/: CMakeLists.txt
src/image-blur/: imageBlur.cu
src/image-convolution/: imageConvolutionNaive.cu  imageConvolutionNaiveGlobal.cu  imageConvolutionShared.cu  imageConvolutionSharedHaloCaching.cu
src/image-grayscale/: imageGray.cu
src/mmul/: matrixMul.cu  matrixMulShared.cu  matrixMulSharedBoundary.cu
src/utils/: load_image.c  matrix.c
src/vector-addition/: vectorAddition.cu
